2006-10-09  Luca Cavalli  <lcavalli@cvs.gnome.org>

	* gnome-da-capplet.c: (web_gconf_changed_cb):
	* gnome-da-capplet.h:

	Added support for legacy gconf key. Based on a patch from Sven
	Herzberg <herzi@gnome-de.org>. Closes bug #359986.

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* default-applications.desktop.in.in: don't list the Application 
	category, patch by Vincent Fretin <vincent.fretin@gmail.com> 
	(Closes: #344321)

2006-05-09  Daniel Holbach  <dholbach@ubuntu.com>

	* gnome-da-capplet.c: (close_cb): update help section name. Closes
	bug #340032.

2006-05-09  Luca Cavalli  <lcavalli@cvs.gnome.org>

	* gnome-default-applications.xml.in: remove unnecessary
	gnome-terminal command line parameter. Closes bug #336700.

2006-04-13  Luca Cavalli  <loopback@slackit.org>

	* gnome-default-applications.xml.in: add support for Sylpheed. Based
	on a patch from Fryderyk Dziarmagowski <freetz@pld-linux.org>.
	Closes bug #332659.

2006-03-23  Luca Cavalli  <loopback@slackit.org>

	* gnome-default-applications.xml.in: Fix Thunderbird command line
	parameter (this time should work). Closes (again) bug #326808.

2006-03-12  Luca Cavalli  <loopback@slackit.org>

	* gnome-da-capplet.c: (terminal_checkbutton_toggled_cb): remove
	double gconf value setting. Closes bug #334331.

2006-03-06  Luca Cavalli  <loopback@slackit.org>

	* gnome-da-capplet.c: (web_combo_changed_cb),
	(mail_combo_changed_cb), (terminal_combo_changed_cb),
	(web_browser_update_combo_box), (mail_reader_update_combo_box),
	(terminal_update_combo_box): replace gtk_entry_set_editable,
	which is deprecated in newly-written code, with
	gtk_editable_set_editable. Closes bug #329193.

2006-03-01  Luca Cavalli  <loopback@slackit.org>

	* gnome-da-capplet.c: (screen_changed_cb), (show_dialog): remove two
	unused variables. Closes bug #332973.

2006-02-28  Luca Cavalli  <loopback@slackit.org>

	* gnome-da-capplet.c: (refresh_combo_box_icons),
	(theme_changed_cb), (screen_changed_cb), (fill_combo_box),